# quaero

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  install.sh  qae.el
.beads/: issues.jsonl
src/: cli.rs  git.rs  main.rs  output.rs  search.rs
tests/: integration.rs  qae-unit-test.el
tests/fixtures/: .hidden_file  greeting.rs
tests/fixtures/subdir/: nested.txt
