[package]
name = "qae"
version = "0.1.0"
edition = "2024"
description = "Quick search tool combining ripgrep and fd"

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
regex = "1"

[profile.release]
strip = true
lto = true
