[package]
name = "qae"
version = "0.2.1"
edition = "2024"
description = "Quick search tool combining ripgrep and fd"

[dependencies]
clap = { version = "4", features = ["derive"] }
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
